--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net46" />
+  <package id="FontAwesome.Sharp" version="5.15.3" targetFramework="net46" />
+  <package id="WinForm.Transitions" version="1.2.45.0" targetFramework="net46" />
 </packages>
