--- a/ProyectoCatedra_PED_MR190768_GM172474_CM221954.csproj
+++ b/ProyectoCatedra_PED_MR190768_GM172474_CM221954.csproj
@@ -66,6 +66,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Cola.cs" />
+    <Compile Include="Configuracion.cs" />
     <Compile Include="Forms\Form1.cs">
       <SubType>Form</SubType>
     </Compile>
